[package]
name = "repay"
version = "0.1.0"
authors = ["ramn <github@rymdimperiet.org>"]
description = "CLI for calculating repayments"

documentation = "https://docs.rs/repay"
homepage = "https://github.com/ramn/repay"
repository = "https://github.com/ramn/repay"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["repay", "money", "cli"]

[dependencies]
ramn-currency = "0.4.1"
# steel-cent = "0.2.0"
